[package]
name = "collections"
version = "0.1.0"
authors = ["Andres Garcia <andresa.garciah621@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
